--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     </style>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.js"></script>
-    <script src="game.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.js"></script>
+    <script type="module" src="game.js"></script>
 </body>
 </html>
